--- a/src/app/math-display/math-display.component.html
+++ b/src/app/math-display/math-display.component.html
@@ -1,3 +1,4 @@
 <p>Type math here: <span id="math-field"></span></p>
 <p>LaTeX of what you typed: <span id="latex"></span></p>
 <p>Math ML of what you typed: <span id="mml"></span></p>
+<p>Raw ML of what you typed: <span id="raw"></span></p>
